# course-platform-microservice

./: .env_example  README.md  docker-compose-dev.yml  docker-compose.yml  qr-code-page.html  todo
.github/workflows/: python-app.yml
api-gateway/: .env_example  Dockerfile  Dockerfile-dev  README.md  app.py  index.html  mypy.ini  pyproject.toml  pytest.ini  readme.md  todo.txt
api-gateway/tests/: conftest.py  test_error_handlers.py  test_exceptions.py  test_full_auth_flow.py
api-gateway/webapp/: __init__.py  container.py  settings.py
courses/: .env_example  README.md  app.py  pyproject.toml  pytest.ini  readme.md
courses/tests/: test_error_handlers.py
courses/webapp/: __init__.py  container.py  extensions.py  settings.py
docs/: index.html
docs/api-gateway/: index.html  (+46 more)
enrolments/: .env_example  Dockerfile  README.md  app.py  pyproject.toml  readme.md
nginx/: default.conf
users/: .env_example  README.md  app.py  pyproject.toml  pytest.ini  readme.md
users/tests/: test_api_user_flow.py  test_email_service.py  test_error_handlers.py  test_user_model.py  test_user_service.py  test_users_schema.py
users/tests/repositories/: conftest.py  test_user_repository.py
users/webapp/: __init__.py  container.py  extensions.py  settings.py
users/webapp/api/: __init__.py  error_handlers.py
users/webapp/api/users/: __init__.py  mappers.py  routes.py  schemas.py
users/webapp/database/models/: user.py
users/webapp/database/repositories/: user.py
users/webapp/services/: email_service.py  exceptions.py
users/webapp/services/users/: dtos.py  services.py
(+184 files in other folders)
